tests/NormalTests/paczka1/fuzzy1/62083382.err
Error in line 5: ETA5Vv S203 13,2
Error in line 7: ETA5Vv S514 48,1
Error in line 8: ETA5Vv A871 36,7
Error in line 12: NHZvS8Qznwo A871 90,1
Error in line 19: NHZvS8Qznwo S514 41,2
Error in line 38: NHZvS8Qznwo A717 43,3
